[package]
name = "pkg-scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.11", features = ["derive"] }
futures = "0.3.28"
log = "0.4.19"
reqwest = "0.11.18"
scraper = "0.17.1"
simple_logger = "4.2.0"
tokio = { version = "1.29.1", features = ["full"] }
